@startuml

header  RECOM Tacviewer
title   Mouse Button Event FSM v1.0
caption Each mouse button has its own state machine
footer  RECOM.one


[*] --> IDLE :start

IDLE --> IDLE : IDLEING
IDLE --> CLICK_CANDIDATE : MOUSE_PRESSED
CLICK_CANDIDATE --> IDLE : CLICK\n DOUBLECLICK\n
CLICK_CANDIDATE --> MOUSE_DRAGGING : MOUSE_DRAG_STARTED
CLICK_CANDIDATE --> CLICK_CANDIDATE : IDLEING\n MOUSE_RELEASED
MOUSE_DRAGGING --> MOUSE_DRAGGING : MOUSE_DRAGGING
MOUSE_DRAGGING --> IDLE : MOUSE_RELEASED

IDLE --> [*] :stop
CLICK_CANDIDATE --> [*] :stop
MOUSE_DRAGGING --> [*] :stop


legend left
__**ALPHABET**__
| **Symbol** | **Description** |
| start | on start() |
| stop | on autoclosable close() |
| IDLEING | new engine revolution without event |
| CLICK | "click threshold exceeded" after MOUSE_RELEASED |
| MOUSE_PRESSED | mouse button pressed event |
| DOUBLECLICK | second MOUSE_PRESSED before "click threshold exceeded" |
| MOUSE_RELEASED | mouse button released |
| MOUSE_DRAG_STARTED | when mouse is pushed and not released within mouse click threshold |
| MOUSE_DRAGGING | when mouse button is pushed and moved |
endlegend

@enduml